<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">CheapTrip</string>

    <!-- Google Maps keys -->
    <string name="google_api_key">AIzaSyCQIi2EuQnjdKZZ25uGUJlFHTa088FLj1w</string>

    <!-- Facebook Keys -->
    <string name="facebook_app_id">516872131835256</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_welcome_msg1">Welcome to CheapTrip.</string>
    <string name="login_welcome_msg2">Here you find other people that have the same destiny!</string>
    <string name="login_btn_text">Log in with </string>
    <string name="activity_login_default_fragment_or_txt">Or you can choose other options</string>

    <!-- Default login -->
    <string name="lblName_txt">Name</string>
    <string name="lblContactNumber_txt">Contact number</string>
    <string name="lblEmail_txt">Email </string>
    <string name="lblPassword_txt">Password</string>
    <string name="btnRegister_txt">Register</string>

    <string name="btnLogintxt">Login</string>

    <!-- Strings related to Facebook Login -->

    <!-- Google + Strings -->
    <string name="app_name_g">G+ Login</string>
    <string name="action_settings_">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <!-- Menu strings -->

    <string name="menu_item_home_title">Go to map!</string>
    <string name="menu_item_received_trips_title">Received trips</string>
    <string name="menu_item_given_trips_title">Given trips</string>
    <string name="menu_item_profile_title">Profile</string>
    <string name="menu_item_settings_title">Settings</string>
    <string name="menu_item_about_title">About</string>
    <string name="menu_item_about_feedback">Feedback</string>

    <!-- Introduction Fragment Strings -->
    <string name="fragment_introduction_slide_title1_text">Economic</string>
    <string name="fragment_introduction_slide_title2_text">New friends</string>
    <string name="fragment_introduction_slide_title3_text">Be green!</string>
    <string name="fragment_introduction_slide_desc1_text">Car sharing is an economical solution. If you want to travel fast and confortable, the cheapest way is this</string>
    <string name="fragment_introduction_slide_desc2_text">By sharing a ride you can increase your contact network and build your trust drivers list.</string>
    <string name="fragment_introduction_slide_desc3_text">By carpooling you can considerably reduce the emission of co2 released by cars and constribuir for a sustainable environment.</string>
    <string name="fragment_introduction_slide_finish_text">Start</string>


    <!-- Map Fragment Strings-->
    <string name="map_fragment_origin_input_text">Starting point</string>
    <string name="map_fragment_destiny_input_text">Destination</string>
    <string name="map_fragment_search_button_text">Search</string>
    <string name="map_fragment_newtrip_button_text">Create</string>
    <string name="map_fragment_new_trip_text">Create ride</string>
    <string name="map_fragment_find_trip_text">Search for a ride</string>

    <!-- Profile Fragment Strings -->

    <string name="fragment_profile_signout_btn_txt">Logout</string>
    <string name="fragment_profile_hardreset_btn_txt">Reset</string>
    <string name="fragment_profile_account_tv_txt">Account</string>
    <string name="fragment_profile_add_car_tv_txt">Add car</string>
    <string name="fragment_profile_clear_car_form">Clear</string>
    <string name="fragment_profile_seats_txt">Seats</string>
    <string name="fragment_profile_year_txt">Year</string>
    <string name="fragment_profile_model_txt">Model</string>
    <string name="fragment_profile_brand_txt">Brand car</string>
    <string name="fragment_profile_my_cars_txt">My cars</string>


    <!-- About Fragment Strings-->
    <string name="about_fragment_about_app_title">The app</string>
    <string name="about_fragment_text">The creation of this app started as an academic project. The source code is public and we, the team, like to share it! </string>
    <string name="about_fragment_about_team_title">The team</string>
    <string name="about_fragment_developer1">Tiago\nSantos</string>
    <string name="about_fragment_developer2">Miguel\nNobre</string>
    <string name="about_fragment_developer3">Fernando\nOliveira</string>
    <string name="about_fragment_app_version">Version</string>

    <!--My Trip Fragment Strings-->
    <string name="mytrip_item_location_origin_text">Starting point</string>
    <string name="mytrip_item_location_destiny_text">Destination</string>
    <string name="mytrip_item_date_text">Date</string>

    <!-- Given Fragment -->
    <string name="given_fragment_ups">Ups!</string>
    <string name="given_fragment_ups_msg">You didn\'t gave any trip</string>

    <!-- Received Fragment -->
    <string name="received_fragment_ups">Ups!</string>
    <string name="received_fragment_ups_msg">You didn\'t received any trip</string>

    <!-- Search Fragment -->
    <string name="search_fragment_ups">Ups!</string>
    <string name="search_fragment_ups_msg">No trips available</string>

    <!-- New trip -->
    <string name="new_trip_frag_route_txt">Route</string>
    <string name="new_trip_frag_date_txt">Date</string>
    <string name="new_trip_frag_date_msg_txt">Here you define the date of your trip</string>
    <string name="new_trip_frag_hour_txt">Hour</string>
    <string name="new_trip_frag_hour_msg_txt">Here you define the hour of your trip</string>
    <string name="new_trip_frag_price_txt">Price</string>
    <string name="new_trip_frag_price_msg_txt">Here you define the price of your trip</string>
    <string name="new_trip_frag_car_txt">Car</string>
    <string name="new_trip_frag_car_msg_txt">Here you define the car of your trip</string>
    <string name="new_trip_frag_baggage_txt">Baggage limit</string>
    <string name="new_trip_frag_baggage_msg_txt">Here you define the baggage limit of your trip</string>
    <string name="new_trip_frag_tolerance_txt">Time tolerance</string>
    <string name="new_trip_frag_tolerance_msg_txt">Here you define the late time of your trip</string>
    <string name="new_trip_frag_observation_txt">Observations</string>
    <string name="new_trip_frag_observation_msg_txt">Here you define the late time of your trip</string>
    <string name="new_trip_frag_rules_msg_txt">I accept the terms and conditions of use of this application . I understand that on any trip can happen less happy times , and the CheapTrip is not responsible for such.</string>

    <string name="new_trip_frag_create_txt">Create new trip</string>
    <string name="new_trip_frag_confirm_txt">Confirm</string>
    <string name="new_trip_frag_subscribe_txt">Subscribe</string>

    <!-- Toast Messagens -->
    <string name="need_vehicle_msg">You need to register a Vehicle. Go to the Profile to register one</string>
    <string name="empty_fields_msg">Empty Fields</string>
    <string name="trip_registered_msg">Trip Registered</string>
    <string name="trip_confirmed_msg">Trip Confirmed</string>
    <string name="trip_subscribed_msg">Subscribed</string>
    <string name="trip_subscribed_notificacation_msg">You are now subscribed</string>
    <string name="accept_rules_msg">You have to agree with the rules</string>
    <string name="success_loggin_msg">You have been successfully logged in</string>
    <string name="vechicle_registered_msg">Vehicle Registed Successfully</string>
    <string name="unknow_error_msg">An error occurred</string>
    <string name="cant_add_car_twice">Cannot register the same car twice</string>
    <string name="no_server_available">No Server Available</string>
    <string name="delete_car_title">Delete Car</string>
    <string name="delete_car_msg">Do you really want delete</string>
    <string name="logout_title">Logout</string>
    <string name="logout_msg">Do you really want to logout?</string>
    <string name="hard_reset_title">"Hard reset"</string>
    <string name="hard_reset_msg">"Do you really want to make an hardreset? If yes, all yout data will be cleared"</string>
    <string name="delete_word">deleted</string>

</resources>
