<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_my_trips"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_trips_title" />
        <item
            android:id="@+id/menu_item_edit_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_profile_title" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/menu_item_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_item_settings_title" />
            <item
                android:id="@+id/menu_item_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_item_about_title" />
        </menu>
    </item>

</menu>
