<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fmt.cheaptrip.fragments.login.DefaultLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lblEmail_txt"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lblPassword_txt"
            android:inputType="textPassword"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/green4_cheaptrip"
                android:text="@string/btnLogintxt"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/green4_cheaptrip"
                android:elevation="0dp"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                android:id="@+id/btnSignIn" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
