<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/map_fragment_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:elevation="15dp"
            app:cardCornerRadius="2dp"
            app:cardPreventCornerOverlap="false">

            <com.fmt.cheaptrip.customviews.LocationAutoCompleteTextView
                android:id="@+id/map_fragment_origin_input"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/green4_cheaptrip"
                android:dropDownWidth="fill_parent"
                android:elevation="10dp"
                android:hint="@string/map_fragment_origin_input_text"
                android:imeOptions="flagNoExtractUi|actionSearch"
                android:inputType="textCapSentences"
                android:padding="2dp"
                android:textColor="@color/white" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:elevation="15dp"
            app:cardCornerRadius="2dp"
            app:cardPreventCornerOverlap="false">

            <com.fmt.cheaptrip.customviews.LocationAutoCompleteTextView
                android:id="@+id/map_fragment_destiny_input"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/green4_cheaptrip"
                android:dropDownWidth="fill_parent"
                android:elevation="10dp"
                android:hint="@string/map_fragment_destiny_input_text"
                android:imeOptions="flagNoExtractUi|actionSearch"
                android:inputType="textCapSentences"
                android:padding="2dp"
                android:textColor="@color/white" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/map_fragment_find_trip_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/green4_cheaptrip"
                android:elevation="5sp"
                android:padding="5dp"
                android:text="@string/map_fragment_find_trip_text"
                android:textColor="@color/white" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/map_fragment_find_trip_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_search"
                app:backgroundTint="@color/green4_cheaptrip"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/map_fragment_new_trip_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|right"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/green4_cheaptrip"
                android:elevation="5sp"
                android:padding="5dp"
                android:text="@string/map_fragment_new_trip_text"
                android:textColor="@color/white" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/map_fragment_new_trip_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_add"
                app:backgroundTint="@color/green4_cheaptrip"
                app:fabSize="mini" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/map_fragment_new_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:src="@android:drawable/ic_menu_add"
            app:backgroundTint="@color/green4_cheaptrip">


        </android.support.design.widget.FloatingActionButton>


    </LinearLayout>


</FrameLayout>